# wanted-pre-onboarding-backend

./: .gitignore  README.md  pyproject.toml
config/: permissions.py  root_urls.py  settings.py
jobs/: models.py  serializers.py  tests.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_alter_company_name.py
profiles/: models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_user_is_company.py  0003_remove_user_last_login.py  0004_user_company.py
